--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/paper-airplane.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Telegram bot manager</title>
+    <title>Telegram Bot Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
